--- a/stackhost.yaml
+++ b/stackhost.yaml
@@ -1,1 +1,17 @@
+user:
+  name: Rezy
+  github: CeLesTiaL-GuArd
+language: "python"
+python_version: "3.10"
 
+commands:
+  build:
+    - "pip install -r requirements.txt"
+  package:
+    - "nano inxi"
+  start:
+    - "python3 kenny_gay.py"
+
+env:
+  ENVIRONMENT: "production"
+  
